allow native access